Fix ugly TOC when title is too long

--- a/app/javascript/styles/mastodon/widgets.scss
+++ b/app/javascript/styles/mastodon/widgets.scss
@@ -568,6 +568,7 @@ $fluid-breakpoint: $maximum-width + 20px;
 .table-of-contents {
   background: darken($ui-base-color, 4%);
   min-height: 100%;
+  max-width: 280px;
   font-size: 14px;
   border-radius: 4px;
 
